--- a/Views/Pago/ListadoPagos.cshtml
+++ b/Views/Pago/ListadoPagos.cshtml
@@ -11,8 +11,8 @@
 </div>
 
 <!-- Botón para agregar nuevo pago -->
-<a href="@Url.Action("Nuevo", "Pago", new { id = ViewBag.contrato.Id })" class="btn btn-success btn-custom"
-    title="Pagar">
+
+<a href="@Url.Action("Nuevo", "Pago", new { id = ViewBag.contrato.Id })" class="btn btn-success btn-custom" title="Pagar">
     <h7 style="font-weight: bold;">Pagar</h7>
 </a>
 
