--- a/Views/Contrato/Detalle.cshtml
+++ b/Views/Contrato/Detalle.cshtml
@@ -43,12 +43,12 @@
         </div>
         <div class="form-group col-md-6 form-group-spacing">
             <label asp-for="FechaInicio" class="control-label">Fecha inicio</label>
-            <input asp-for="FechaInicio" class="form-control" readonly>
+            <input asp-for="FechaInicio" class="form-control" type="date" readonly>
             <span asp-validation-for="FechaInicio" class="text-danger"></span>
         </div>
         <div class="form-group col-md-6 form-group-spacing">
             <label asp-for="FechaFin" class="control-label">Fecha fin</label>
-            <input asp-for="FechaFin" class="form-control" readonly />
+            <input asp-for="FechaFin" class="form-control" type="date" readonly />
             <span asp-validation-for="FechaFin" class="text-danger"></span>
         </div>
         <div class="form-group col-md-6 form-group-spacing">
@@ -61,7 +61,7 @@
 
         <div class="form-group col-md-12 form-group-spacing">
             <label asp-for="Descripcion" class="control-label"></label>
-            <input asp-for="Descripcion" class="form-control" readonly>
+            <input asp-for="Descripcion" class="form-control " readonly>
             <span asp-validation-for="Descripcion" class="text-danger"></span>
         </div>
 
