--- a/Views/Pago/Detalle.cshtml
+++ b/Views/Pago/Detalle.cshtml
@@ -13,7 +13,7 @@
     <input type="hidden" name="Id" value="@id">
     <div class="row">
         <div class="form-group col-md-6 form-group-spacing">
-            <label class="control-label">ID</label>
+            <label class="control-label">Código</label>
             <input type="text" class="form-control" value="@id" readonly>
         </div>
         <div class="form-group col-md-6 form-group-spacing">
