crear contrato layout

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -44,7 +44,7 @@
                                     <li><a class="dropdown-item" asp-area="" asp-controller="Contrato"
                                         asp-action="Index">Principal</a></li>
                                     <li><a class="dropdown-item" asp-area="" asp-controller="Contrato"
-                                        asp-action="Crear">Crear contrato</a></li>
+                                        asp-action="Editar">Crear contrato</a></li>
 
 
                                 </ul>
